Added WhiteLagoon.Domain.Entities to _ViewImports file

--- a/WhiteLagoon.Web/Views/Villa/Index.cshtml
+++ b/WhiteLagoon.Web/Views/Villa/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WhiteLagoon.Domain.Entities.Villa>
+﻿@model IEnumerable<Villa>
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
