--- a/WhiteLagoon.Web/Views/Home/Index.cshtml
+++ b/WhiteLagoon.Web/Views/Home/Index.cshtml
@@ -1,11 +1,12 @@
-﻿<div>
+﻿@model HomeVM
+<div>
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner">
+        <div class="carousel-inner" style="height:550px">
             <div class="carousel-item active">
                 <img src="~/images/slide2.jpg" class="d-block w-100" alt="...">
             </div>
@@ -28,14 +29,18 @@
             <div class="col-12 col-md-5  offset-md-1 pl-2  pr-2 pr-md-0">
                 <div class="form-group">
                     <label>Check In Date</label>
-                    <input class="form-control" />
+                    <input asp-for="CheckIn" class="form-control" type="date" />
                 </div>
             </div>
 
             <div class="col-8 col-md-3 pl-2 pr-2">
                 <div class="form-group">
                     <label>No. of nights</label>
-                    <select class="form-select">
+                    <select asp-for="Nights" class="form-select">
+                        @for (int i = 1; i <= 10; i++)
+                        {
+                            <option value="@i">@i</option>
+                        })
                     </select>
                 </div>
             </div>
@@ -50,6 +55,108 @@
             </div>
 
         </div>
+        <div id="VillasList">
+            <div class="row px-lg-5 m-lg-4 m-sm-0 px-sm-0" style="--bs-gutter-x:0">
 
+                @foreach (var villa in Model.VillaList)
+                {
+                    <div class="p-4 col-md-12 col-lg-6">
+                        <div class="row" style="border-radius:5px; border: 1px solid #aaa">
+                            <div class="col-4 p-2">
+                                <img class="d-block w-100" style="border-radius:5px;" src="@villa.ImageUrl">
+                            </div>
+                            <div class="col-8">
+                                <div class="d-flex justify-content-between">
+                                    <p class="card-title text-warning" style="font-size:xx-large">@villa.Name</p>
+                                    <div class="pt-2">
+                                        <button type="button" class="btn btn-sm btn-outline-success" data-bs-toggle="modal" data-bs-target='#exampleModal-@(villa.Id)'>
+                                            Details
+                                        </button>
+                                    </div>
+                                </div>
+                                <p class="card-text">
+                                    @Html.Raw(villa.Description)
+                                </p>
+                            </div>
+                            <div class="col-12">
+                                <div class="row pb-3 pt-2">
+                                    <div class="col-4">
+                                        <a class="btn btn-success form-control btn-block">
+                                            Book
+                                        </a>
+                                    </div>
+                                    <div class="col-4">
+                                        <span class="">Max Occupancy : @villa.Occupancy adults </span><br />
+                                        <span class=" pt-1">Villa Size : @villa.Sqft sqft</span><br />
+                                    </div>
+                                    <div class="col-4">
+                                        <span class="text-warning float-end font-weight-bold pt-1" style="font-size:25px;">
+                                            INR
+                                            <span style="border-bottom:1px solid #ff6a00">
+                                                @villa.Price.ToString("c");
+                                            </span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="modal fade" id="exampleModal-@(villa.Id)" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-xl" style="border: 1px solid #aaa; border-radius:7px;">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-3 text-success" id="exampleModalLabel">Villa Details</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body m-0">
+
+                                    <div class="row">
+                                        <div class="col-12 col-md-5">
+                                            <img src="@villa.ImageUrl" style="border-radius:10px;" width="100%" />
+                                        </div>
+                                        <div class="col-12 col-md-7">
+                                            <div class="row p-2">
+                                                <div class="col-12">
+                                                    <p class="card-title text-warning" style="font-size:xx-large">@villa.Name</p>
+                                                    <p class="card-text" style="font-size:large">
+                                                        @Html.Raw(villa.Description)
+                                                    </p>
+                                                    @if(villa.VillaAmenity!=null && villa.VillaAmenity.Count() > 0){
+                                                    <p class="h5 text-white">Villa Amenities</p>
+                                                    <ul>
+                                                        @foreach (var amenity in villa.VillaAmenity)
+                                                        {
+                                                            <li>@amenity.Name</li>
+                                                        }
+                                                    </ul>
+                                                    }
+                                                </div>
+                                            </div>
+                                            <div class="row col-12">
+                                                <span class="text-end p-0 pt-3 m-0">
+                                                    <span class="float-right">Max Occupancy : @villa.Occupancy adults </span><br />
+                                                    <span class="float-right pt-1">Villa Size : @villa.Sqft sqft</span><br />
+                                                    <p class="text-warning font-weight-bold pt-1">
+                                                        INR
+                                                        <span style=" #ff6a00">
+                                                            @villa.Price.ToString("c") / night
+                                                        </span>
+                                                    </p>
+                                                </span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-outline-danger" data-bs-dismiss="modal">Close</button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
     </form>
 </div>
