--- a/WhiteLagoon.Web/Views/Account/Register.cshtml
+++ b/WhiteLagoon.Web/Views/Account/Register.cshtml
@@ -53,5 +53,10 @@
             </div>
         </div>
     </div>
-
 </div>
+
+@section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+}
+
+
